[docs] can successful checkout cart.
