# docs/swagger.json
@@ -54,6 +54,21 @@
                 }
             }
         },
+        "/api/cart/checkout": {
+            "post": {
+                "description": "Cart 結帳",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cart"
+                ],
+                "summary": "checkout Cart",
+                "responses": {
+                    "200": {}
+                }
+            }
+        },
         "/api/product/": {
             "get": {
                 "description": "獲得products list",
@@ -85,10 +100,13 @@
                 "amount": {
                     "type": "number"
                 },
+                "isCheckout": {
+                    "type": "boolean"
+                },
                 "products": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/model.OrderProduct"
+                        "$ref": "#/definitions/model.CartProduct"
                     }
                 },
                 "userID": {
@@ -96,7 +114,7 @@
                 }
             }
         },
-        "model.OrderProduct": {
+        "model.CartProduct": {
             "type": "object",
             "properties": {
                 "cartID": {
